# dsl-debug

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
config/: tool_config.yaml
configs/: grpo_rl_only.env  grpo_sft_rl.env  grpo_smoke_test.env  sft_7b.env
data/rl/: val.parquet
data/sft/: train.parquet  val.parquet
data/test_sets/: intent_mismatch.parquet  nonlocal.parquet  standard.parquet
eval/: __init__.py  evaluate.py
examples/: evaluate_local.py  evaluate_openai.py  quickstart.py
scripts/: build_image.sh  dsl-debug  smoke_test.sh  vast.sh
server/: Dockerfile  app.py  docker-compose.yml
src/dsl_debug/: __init__.py  bug_injector.py  cli.py  data_generator.py  environment.py  interpreter.py  merge.py  test_set.py
tests/: conftest.py  test_environment.py  test_interpreter.py  test_server.py  test_server_integration.py
tools/: dsl_debug_tool.py  reward_fn.py
